# polkadot-mini-hackathon-2026-03

./: .gitignore
1886_pixi-ace-air-combat/contract/: README.md  hardhat.config.ts
1886_pixi-ace-air-combat/contract/contracts/: AceAirCombat.sol
1886_pixi-ace-air-combat/dapp/: package-lock.json
1886_pixi-ace-air-combat/dapp/abis/: AceAirCombat.json
1886_pixi-ace-air-combat/dapp/src/: config.ts
Atomic_Intent_Shield_Polkadot2_0/: .env.example  .env.revive.solver.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml
Atomic_Intent_Shield_Polkadot2_0/circuits/: intent_circuit.circom  package.json  settlement_circuit.circom
Atomic_Intent_Shield_Polkadot2_0/circuits/scripts/: export_vk.sh  trusted_setup.sh
Atomic_Intent_Shield_Polkadot2_0/circuits/test/: test_intent_circuit.js  test_settlement_circuit.js
Atomic_Intent_Shield_Polkadot2_0/contracts/: Cargo.toml
Atomic_Intent_Shield_Polkadot2_0/contracts/dark_pool/: Cargo.toml  lib.rs
Atomic_Intent_Shield_Polkadot2_0/contracts/groth16_verifier/: Cargo.toml  lib.rs
Atomic_Intent_Shield_Polkadot2_0/contracts/intent_verifier/: Cargo.toml  lib.rs
Atomic_Intent_Shield_Polkadot2_0/contracts/solidity/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
Atomic_Intent_Shield_Polkadot2_0/contracts/solidity/contracts/: DarkPool.sol  IntentVerifierMock.sol  MockERC20.sol
Atomic_Intent_Shield_Polkadot2_0/contracts/solidity/scripts/: deploy-mocks.ts  deploy.ts  hardhat-run.cjs  mint-mocks.ts
Atomic_Intent_Shield_Polkadot2_0/contracts/solidity/test/: DarkPool.test.cjs
Atomic_Intent_Shield_Polkadot2_0/deploy/: benchmark_evm_receipts.js  deploy_local.sh  deploy_revive_solidity.sh  deploy_testnet.sh
Atomic_Intent_Shield_Polkadot2_0/frontend/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
Atomic_Intent_Shield_Polkadot2_0/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
Atomic_Intent_Shield_Polkadot2_0/solver/: Cargo.toml  Dockerfile
Atomic_Intent_Shield_Polkadot2_0/solver/src/: api.rs  auth.rs  config.rs  main.rs  matcher.rs  models.rs  snowbridge.rs  storage.rs  substrate.rs  utils.rs
FireflyQR/: .gitignore
FireflyQR/backend/: .env.example  go.mod  go.sum  main.go
Willbook/: readme.md
Willbook/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
Willbook/frontend/src/: App.tsx  contract.ts  styles.css
openpick-edu/: .example.env.local  .gitignore  README.md  global.d.ts  i18n.ts  jest.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json
openpick-edu/app/: globals.css  layout.tsx
openpick-edu/app/[locale]/: ClientWrapper.tsx  layout.tsx  page.tsx
openpick-edu/components/: AddCounselorModal.tsx  ChatContainer.tsx  ChatMessage.tsx  CounselorCard.tsx  Footer.tsx  GiscusComments.tsx  Header.tsx  HtmlLangUpdater.tsx  InputArea.tsx  LeaderboardTable.tsx  NFTMintForm.tsx  Pagination.tsx  ServiceStatus.tsx  SettingsModal.tsx
openpick-edu/components/ContractDeployer/: index.tsx
openpick-edu/components/ContractEditor/: index.tsx
openpick-edu/contexts/: AIConfigContext.tsx  WalletContext.tsx
openpick-edu/hooks/: useAdmin.ts  useCounselor.ts
openpick-edu/i18n/: request.tsx
openpick-edu/lib/: admin-auth.ts  contract.ts  database-counselors.ts  database-local.ts  database-turso.ts  deploy.ts  giscus-config.ts  giscus-defaults.ts  giscus-validation.ts  x402-server.ts
openpick-edu/scripts/: init-counselors.ts  test-x402.sh
openpick-edu/store/: contractStore.tsx
polkaink/docs/: dev_log.md
polkaink/frontend/: jest.config.ts
polkaink/frontend/src/: App.tsx  main.tsx
pvm-precompiles/backend/: README.md
pvm-precompiles/backend/pvm-cli/: Cargo.toml  README.md
pvm-precompiles/backend/pvm-cli/src/: main.rs  utils.rs
pvm-precompiles/backend/pvm-cli/src/commands/: mod.rs  schnorr.rs
pvm-precompiles/backend/pvm-cli/src/commands/bls/: points.rs  shared.rs  signatures.rs
pvm-precompiles/doc/: building-with-precompiles.md  how-precompiles-work.md  resources.md
pvm-precompiles/frontend/: README.md  hardhat.config.ts
(+126 files in other folders)
