[workspace]
resolver = "2"
members = [
    "dark_pool",
    "intent_verifier",
    "groth16_verifier",
]

[workspace.dependencies]
ink = { version = "5.1.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
