[package]
name = "atomic-intent-polkadot-solver"
version = "0.1.0"
edition = "2021"
authors = ["Atomic Intent for Polkadot Team"]
description = "Atomic Intent for Polkadot Solver - intent matching and settlement service"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Substrate interaction
subxt = { version = "0.37", features = ["substrate-compat"] }
subxt-signer = { version = "0.37", features = ["sr25519"] }
# Crypto
hex = "0.4"
blake2 = "0.10"

# Auth
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
parity-scale-codec = "3.6"

# EVM (Snowbridge cross-chain settlement on Sepolia)
ethers = { version = "2.0", default-features = false, features = ["rustls"] }

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
