[package]
name = "pvmcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
schnorr = { path = "../crates/schnorr" }
bls12-381 = { path = "../crates/bls12_381" }
ark-bls12-381 = "0.4"
hex = "0.4"
rand = "0.8"
alloy-primitives = "1.5.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
